Mod 19.19 - Challenge: adding order filter template variables